extra catalog block fixed overflow

--- a/source/less/blocks/order-else.less
+++ b/source/less/blocks/order-else.less
@@ -66,6 +66,7 @@
     font-size: 16px;
     line-height: 20px;
     text-align: center;
+    align-self: flex-start;
   }
 
   .order-else::after {
